force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__EndDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__EndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>