force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__JobId__c.field-meta.xml
<CustomField>
    <fullName>SCMT__JobId__c</fullName>
    <label>Bulk Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>