force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__Log__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>