force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__RecordsMigrated__c.field-meta.xml
<CustomField>
    <fullName>SCMT__RecordsMigrated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Records Migrated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>