force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__RestartLink__c.field-meta.xml
<CustomField>
    <fullName>SCMT__RestartLink__c</fullName>
    <description>Stores JSON for restarting the current job</description>
    <label>RestartLink</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>