force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__Stage__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>