force-app/main/default/objects/SCMT__Desk_Migration__c/fields/SCMT__StartDate__c.field-meta.xml
<CustomField>
    <fullName>SCMT__StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>