force-app/main/default/objects/SCMT__Desk_Migration__c/listViews/SCMT__All.listView-meta.xml
<ListView>
    <fullName>SCMT__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>